# xmas-lights

./: .gitignore  README.md  app.py  index.html  led_thread.py  minify.js  nginx-config.conf  requirements.txt  xmaslights.service
.github/workflows/: Dockerfile  main.yml
backend/: .gitignore  app.py  install.sh  led_thread.py  ledthread.py  pyproject.toml  requirements.txt  rpi_ws281x.pyi  rpi_ws281x_mock.py  rpi_ws281x_proxy.py  xmaslights.service
backend/plugins/: __init__.py  baseplugin.py  plugin.py
backend/plugins/teams/: __init__.py  config.toml  graphrequests.py  plugin.py
frontend/: nginx-config.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  DeleteModal.js  PatternModal.js  PatternTable.js  Schedule.js  index.css  index.js
static/: index.html
xmas-lights-flask/: .gitignore  app.py  app_html.py  patterns.json
xmas-lights-flask/static/: index.html
xmas-lights-html/: .gitignore  index.html  minify.js  package-lock.json  package.json
xmas-lights-react/: package-lock.json  package.json
xmas-lights-react/public/: index.html  manifest.json
xmas-lights-react/src/: App.js  DeleteModal.js  Editor.js  PatternModal.js  PatternTable.js  Schedule.js  index.css
xmas-lights-upython/: html.py  main.py  secrets.py.example
