[project]
name = "xmas-lights"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy~=2.3",
    "pydantic-settings>=2.12.0",
    "requests~=2.31",
    "websockets~=12.0",
]

[dependency-groups]
prod = ["rpi_ws281x~=5.0"]
dev = [
    "mypy>=1.18.2",
    "rpi-ws281x-mock>=0.2.2",
    "ruff>=0.14.2",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["SIM108"]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can be improved due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "NPY",      # Some numpy-specific things
]
